[gd_scene load_steps=27 format=3 uid="uid://cc0am8pfu1ola"]

[ext_resource type="Texture2D" uid="uid://by2y0s3dsm6bp" path="res://assets/images/Snail/Walk (38x24).png" id="1_6lcqf"]
[ext_resource type="Script" uid="uid://477ka6c4jdkj" path="res://scripts/snail.gd" id="1_oqbjf"]
[ext_resource type="Texture2D" uid="uid://ur3j3u0aw68f" path="res://assets/images/Snail/Walk_2(38x24).png" id="3_5b1ba"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oqbjf"]
atlas = ExtResource("1_6lcqf")
region = Rect2(0, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5b1ba"]
atlas = ExtResource("1_6lcqf")
region = Rect2(38, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_er827"]
atlas = ExtResource("1_6lcqf")
region = Rect2(76, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymp48"]
atlas = ExtResource("1_6lcqf")
region = Rect2(114, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_761fw"]
atlas = ExtResource("1_6lcqf")
region = Rect2(152, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vewxh"]
atlas = ExtResource("1_6lcqf")
region = Rect2(190, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lcli"]
atlas = ExtResource("1_6lcqf")
region = Rect2(228, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6go0"]
atlas = ExtResource("1_6lcqf")
region = Rect2(266, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu1r7"]
atlas = ExtResource("1_6lcqf")
region = Rect2(304, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v7em"]
atlas = ExtResource("1_6lcqf")
region = Rect2(342, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dft4h"]
atlas = ExtResource("3_5b1ba")
region = Rect2(0, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fc658"]
atlas = ExtResource("3_5b1ba")
region = Rect2(38, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7h5c"]
atlas = ExtResource("3_5b1ba")
region = Rect2(76, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq1qi"]
atlas = ExtResource("3_5b1ba")
region = Rect2(114, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayiq7"]
atlas = ExtResource("3_5b1ba")
region = Rect2(152, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_87r5s"]
atlas = ExtResource("3_5b1ba")
region = Rect2(190, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ulr"]
atlas = ExtResource("3_5b1ba")
region = Rect2(228, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_txh3t"]
atlas = ExtResource("3_5b1ba")
region = Rect2(266, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_evvgo"]
atlas = ExtResource("3_5b1ba")
region = Rect2(304, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_sse2s"]
atlas = ExtResource("3_5b1ba")
region = Rect2(342, 0, 38, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_dft4h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqbjf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5b1ba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_er827")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymp48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_761fw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vewxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lcli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6go0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu1r7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v7em")
}],
"loop": true,
"name": &"running",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dft4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fc658")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7h5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vq1qi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayiq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87r5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ulr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txh3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evvgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sse2s")
}],
"loop": true,
"name": &"running_B",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fc658"]
size = Vector2(30, 13.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_u7h5c"]
radius = 11.0

[node name="Snail" type="Area2D"]
scale = Vector2(3, 3)
script = ExtResource("1_oqbjf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_dft4h")
animation = &"running_B"
autoplay = "running"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 3.75)
shape = SubResource("RectangleShape2D_fc658")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(6, 0)
shape = SubResource("CircleShape2D_u7h5c")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="player_died" from="." to="." method="_on_player_died"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
